--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<script type="module" src="./js/app.js"></script> 
+
 <html>
     <body>
         <h1>ToDo List</h1>
@@ -9,8 +9,8 @@
         <div id="container">
             <div class="column left">
                 <button class="removeItem button">Remove Item</button>
-                <button class="selectAll button">Select All</button>
-                <button class="markCompleted button">Completed Item</button>
+                <button class="selectAll button">Select All Items</button>
+                <button class="markCompleted button">Complete Item</button>
             </div>
             <div class="column right">
                 <span class="label">Items To Do</span>
@@ -18,4 +18,8 @@
             </div>
         </div>          
     </body> 
+    <script type="text/javascript" src="./js/modules/toDoListView.js"></script> 
+    <script type="text/javascript" src="./js/modules/toDoListModel.js"></script> 
+    <script type="text/javascript" src="./js/modules/toDoListController.js"></script> 
+    <script type="text/javascript" src="./js/app.js"></script> 
 </html>
