--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             </div>
         </div>          
     </body> 
+    <script integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="./js/modules/toDoListView.js"></script> 
     <script type="text/javascript" src="./js/modules/toDoListModel.js"></script> 
     <script type="text/javascript" src="./js/modules/toDoListController.js"></script> 
