--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
                 <span class="label">Items To Do</span>
                 <ol class="todolist"></ol>   
             </div>
-        </div>          
+        </div> 
+        <template class ="todoitemTemplate">
+            <li class="toDoItem">
+            <label>
+            <input class="todoItemcheck" type="checkbox">
+            <span class ="toDoItemText"></span>
+            <button class="deleteItem">x</button>
+            </label>
+            </li>
+        </template>               
     </body> 
     <script integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./js/source/pubsub.js"></script> 
+    <script type="text/javascript" src="./js/source/toDoListModel.js"></script> 
+    <script type="text/javascript" src="./js/source/ToDoBaseView.js"></script> 
+    <script type="text/javascript" src="./js/source/ToDoItemView.js"></script> 
+    <script type="text/javascript" src="./js/source/ToDoListView.js"></script> 
+    <script type="text/javascript" src="./js/source/ToDoActionView.js"></script> 
+    
+   
 
-    <script type="text/javascript" src="./js/modules/toDoListView.js"></script> 
-    <script type="text/javascript" src="./js/modules/toDoListModel.js"></script> 
-    <script type="text/javascript" src="./js/modules/toDoListController.js"></script> 
     <script type="text/javascript" src="./js/app.js"></script> 
 </html>
