init render destoy

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         </template>               
     </body> 
     <script integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./js/source/pubsub.js"></script> 
+    <script type="text/javascript" src="./js/source/Constant.js"></script> 
+    <script type="text/javascript" src="./js/source/PubSub.js"></script> 
+    <script type="text/javascript" src="./js/source/GlobalMethod.js"></script> 
     <script type="text/javascript" src="./js/source/toDoListModel.js"></script> 
-    <script type="text/javascript" src="./js/source/ToDoBaseView.js"></script> 
-    <script type="text/javascript" src="./js/source/ToDoItemView.js"></script> 
-    <script type="text/javascript" src="./js/source/ToDoListView.js"></script> 
-    <script type="text/javascript" src="./js/source/ToDoActionView.js"></script> 
+    <script type="text/javascript" src="./js/source/toDoBaseView.js"></script> 
+    <script type="text/javascript" src="./js/source/toDoItemView.js"></script> 
+    <script type="text/javascript" src="./js/source/toDoListView.js"></script> 
+    <script type="text/javascript" src="./js/source/toDoActionView.js"></script> 
     
    
 
